# PyGraphLearning

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
SGL/: debug.py  example.py  learn.py  static_graph.py
TVGL/: example.py  learn.py  timevarying_graph.py
examples/: example_sgl.py  example_tvgl.py
graph_learning/: __init__.py  graph_learn.py
graph_learning/utils_sgl/: learn_static.py  toy_graph_static.py
graph_learning/utils_tvgl/: learn_timevarying.py
pygl/: __init__.py  graph_learning.py
pygl/utils_sgl/: __init__.py  toy_graph.py
pygl/utils_tvgl/: __init__.py
pygraphlearning/: graph_learning.py
pygraphlearning/utils/static/: static_graph_learning.py  static_graph_model.py
pygraphlearning/utils/time_varying/: time_varying_graph_learning.py  time_varying_graph_model.py
