[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygraphlearning"
version = "1.0.0"
dependencies = [
    'numpy==1.26.3',
    'scikit-learn==1.4.0',
    'matplotlib==3.8.2',
    'scipy==1.12.0',
    'networkx==3.2.1'    
]
requires-python = ">=3.8"
authors = [
    {name = "Masaki Takahashi"},
]
maintainers = [
    {name = "Masaki Takahashi"},
]
description = "Static and Time-Varying Graph Learning by Python"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["graph learning", "graph signal processing", "GSP", "machine learning", "unsupervised learning"]
classifiers = [
    "Programming Language :: Python",
]

[project.urls]
Repository = "https://github.com/matyaki-matyaki/PyGraphLearning"
