[tool.poetry]
name = "graph_learning"
version = "1.1.0"
description = "Static and Time-Varying Graph Learning by Python"
authors = ["matyaki-matyaki"]
license = "LICENSE.txt"
readme = "README.md"
keywords = ["graph learning", "graph signal processing", "GSP", "machine learning", "unsupervised learning"]
classifiers = [
    "Programming Language :: Python",
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
scipy = "^1.12.0"
networkx = "^3.2.1"
scikit-learn = "^1.4.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
