[tool.poetry]
name = "pygraphlearning"
version = "1.2.0"
description = ""
authors = ["matyaki-matyaki"]
license = "LICENSE.txt"
readme = "README.md"
keywords = ["graph learning", "graph signal processing", "GSP", "machine learning", "unsupervised learning"]
classifiers = [
    "Programming Language :: Python",
]

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.9.0"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
scipy = "^1.12.0"
networkx = "^3.2.1"
scikit-learn = "^1.4.1.post1"
networkx-stubs = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.mypy.overrides]]
module = [
    "scipy",
    "pygraphlearning.*"
]
ignore_missing_imports = true
